; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_numeric.c_numeric_out_sci.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_numeric.c_numeric_out_sci.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"NaN\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @numeric_out_sci(i32 %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i64 @NUMERIC_IS_NAN(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = call i8* @pstrdup(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  store i8* %12, i8** %3, align 8
  br label %19

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @init_var_from_num(i32 %14, i32* %6)
  %16 = load i32, i32* %5, align 4
  %17 = call i8* @get_str_from_var_sci(i32* %6, i32 %16)
  store i8* %17, i8** %7, align 8
  %18 = load i8*, i8** %7, align 8
  store i8* %18, i8** %3, align 8
  br label %19

19:                                               ; preds = %13, %11
  %20 = load i8*, i8** %3, align 8
  ret i8* %20
}

declare dso_local i64 @NUMERIC_IS_NAN(i32) #1

declare dso_local i8* @pstrdup(i8*) #1

declare dso_local i32 @init_var_from_num(i32, i32*) #1

declare dso_local i8* @get_str_from_var_sci(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
